# webclaw

./: .gitignore  CHANGELOG.md  Cargo.toml  DOKPLOY.md  Dockerfile  Dockerfile.ci  Iniciar.md  proxies (1).txt
.github/workflows/: release.yml
crates/webclaw-api/: Cargo.toml
crates/webclaw-api/src/: main.rs
crates/webclaw-cli/src/: cloud.rs  main.rs
crates/webclaw-core/src/: lib.rs  structured_data.rs
crates/webclaw-fetch/: Cargo.toml
crates/webclaw-fetch/src/: browser.rs  client.rs  error.rs  lib.rs  proxy.rs
crates/webclaw-mcp/src/: server.rs
