[package]
name = "webclaw-api"
description = "REST API server for webclaw web extraction toolkit"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "webclaw-api"
path = "src/main.rs"

[dependencies]
webclaw-core = { workspace = true }
webclaw-fetch = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = "0.7"
